<resources>
    <string name="default_error">Unknown error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="login">Login</string>
    <string name="toggle_language">Toggle language</string>
    <string name="change_theme">Change theme</string>
    <string name="reset">Reset</string>
    <string name="log_out">Log out</string>
    <string name="debug_menu">Debug menu</string>
    <string name="settings">Settings</string>
    <string name="night_mode_toggle">Toggle night mode:</string>
    <string name="choose_language">Choose a language:</string>
    <string name="description">Description</string>
    <string name="department">Department</string>
    <string name="smooth">SMOOTH</string>
    <string name="snapping">SNAPPING</string>
    <string name="no_internet">Internet connection lost, as soon as it comes back missing data will load</string>
</resources>