<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/textBlack"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/toggleNightModeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/night_mode_toggle"
        android:textColor="@color/textBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsLabel" />

    <ImageView
        android:id="@+id/sunIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/icon_sun_yellow"
        app:layout_constraintTop_toTopOf="@id/toggleNightModeLabel"
        app:layout_constraintBottom_toBottomOf="@id/toggleNightModeLabel"
        app:layout_constraintStart_toEndOf="@id/toggleNightModeLabel"/>

    <ImageView
        android:id="@+id/moonIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/icon_moon_blue"
        app:layout_constraintTop_toTopOf="@id/toggleNightModeLabel"
        app:layout_constraintBottom_toBottomOf="@id/toggleNightModeLabel"
        app:layout_constraintStart_toEndOf="@id/sunIcon"/>
    <TextView
        android:id="@+id/languageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/choose_language"
        android:textColor="@color/textBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleNightModeLabel" />

    <ImageView
        android:id="@+id/montenegroFlag"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/icon_flag_montenegro"
        app:layout_constraintBottom_toBottomOf="@id/languageLabel"
        app:layout_constraintStart_toEndOf="@id/englishFlag"
        app:layout_constraintTop_toTopOf="@id/languageLabel" />

    <ImageView
        android:id="@+id/englishFlag"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/icon_flag_uk"
        app:layout_constraintBottom_toBottomOf="@id/languageLabel"
        app:layout_constraintStart_toEndOf="@id/languageLabel"
        app:layout_constraintTop_toTopOf="@id/languageLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>